--- a/environment.yml
+++ b/environment.yml
@@ -1,9 +1,9 @@
-name: 2025-dotson-thesis
+name: 2025-dotson-thesis-2
 channels:
   - conda-forge
   - bioconda
 dependencies:
-  - python<3.12
+  # - python<3.12
   - pip 
 
   - ipython
@@ -60,4 +60,5 @@ dependencies:
     - git+https://github.com/kmax12/gridstatus.git
     - us
     - mycolorpy
+    - "camelot-py[base]"
     
