--- a/analysis/config.yml
+++ b/analysis/config.yml
@@ -15,9 +15,52 @@ table_pages:
   development_cost: "84"
   development_time: 86,87
   foak_cost: 89,90
-  compatibility: 92,93
-  familiarity: 95,96
+  incompatibility: 92,93
+  unfamiliarity: 95,96
 
 # summary tables from Fuel Cycle Options Study, Appendix C
-summary_tables:
-  - 
+# summary_tables:
+#   - 
+
+relative_importance:
+  mass_snf_hlw_disposal: 1
+  activity_at_100_yrs: 1
+  activity_at_100k_years: 1
+  mass_du_ru_rth_disposal: 1
+  volume_llw_disposal: 1
+  safety_challenges: 1
+  land_use: 1
+  water_use: 1
+  carbon_dioxide_emissions: 1
+  total_worker_dose: 1
+  natural_uranium_required: 1
+  natural_thorium_utilization: 1
+  development_cost: 1
+  development_time: 1
+  foak_cost: 1
+  incompatibility: 1
+  unfamiliarity: 1
+
+
+promising_fuelcycles:
+  most_promising:
+    - EG23
+    - EG24
+    - EG29
+    - EG30
+  potentially_promising:
+    - EG06
+    - EG07
+    - EG08
+    - EG09
+    - EG26
+    - EG28
+    - EG33
+    - EG34
+    - EG37
+    - EG38
+    - EG40
+  less_promising:
+    - EG04
+    - EG10
+    - EG14
