--- a/analysis/Snakefile
+++ b/analysis/Snakefile
@@ -302,18 +302,18 @@ rule create_dc_model:
     script:
         "scripts/05-examples-scripts/datacenter_example.py"
 
-rule solve_datacenter:
-    input:
-        dc_problem = f"{data_path}datacenter_problem.pkl"
-    output:
-        dc_results = f"{data_path}datacenter_results.pkl"
-    script:
-        "scripts/05-examples-scripts/solve_datacenter.py"
+# rule solve_datacenter:
+#     input:
+#         dc_problem = f"{data_path}datacenter_problem.pkl"
+#     output:
+#         dc_results = f"{data_path}datacenter_results.pkl"
+#     script:
+#         "scripts/05-examples-scripts/solve_datacenter.py"
 
 rule plot_datacenter:
     input:
         tech_list = f"{data_path}datacenter_techlist.pkl",
-        dc_results = f"{data_path}datacenter_results.pkl"
+        # dc_results = f"{data_path}datacenter_results.pkl"
     output:
         dc_objective_space = f"{docs_path}figures/05_examples_chapter/dc_objective_space.pgf",
         dc_objective_space_10 = f"{docs_path}figures/05_examples_chapter/dc_objective_space_10.pgf",
