adds data and figures for scaling studies

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,8 @@ data/technology_costs.csv
 data/datacenter_techlist.pkl
 data/datacenter_problem.pkl
 data/datacenter_results.pkl
+thread_data_dict.pkl
+time_data_dict.pkl
 ATBe.csv
 *gen.pkl
 *EROI*.pkl
