adds plots to benchmark chapter and starts cleaning up the text

--- a/analysis/Snakefile
+++ b/analysis/Snakefile
@@ -184,8 +184,9 @@ rule run_dispatch_comparison:
     output:
         demand_plot = f"{docs_path}figures/04_benchmark_chapter/demand_plot.pgf",
         demand_data = f"{data_path}synthetic_demand_data.pkl",
-        wind_plot = f"{docs_path}/figures/04_benchmark_chapter/wind_plot.pgf",
+        wind_plot = f"{docs_path}figures/04_benchmark_chapter/wind_plot.pgf",
         objective_results = f"{data_path}algorithm_comparison_objective_results.csv",
+        objective_table = f"{docs_path}tables/algorithm_comparison_results.tex",
         dispatch_data = expand("../data/{scenario}_dispatch_results_{opt}.csv", 
                                 scenario=scenarios,
                                 opt=optimizers)
