--- a/analysis/Snakefile
+++ b/analysis/Snakefile
@@ -414,7 +414,18 @@ rule plot_uiuc_emissions:
     script:
         "scripts/07-interview-scripts/plot_uiuc_emissions.py"
 
+rule retrieve_illinois_data:
+    output:
+        illinois_data = f"{data_path}cb_2024_us_county_500k.zip"
+    shell: f"""
+            (cd {data_path} && \
+            curl -O \
+            "https://www2.census.gov/geo/tiger/GENZ2024/shp/cb_2024_us_county_500k.zip")
+            """
+
 rule plot_illinois_regions:
+    input:
+        illinois_data = f"{data_path}cb_2024_us_county_500k.zip"
     output:
         illinois_plot = f"{docs_path}figures/07_interview_chapter/illinois_plot.pgf"
     script:
